    and hourly information 
  * Added stations Lignano Pineta, Lignano Riviera, Lignano Sabbiadoro (Italy) to
    weather.com, foreca.com source  
  * Added stations Lignano Sabbiadoro (Italy) to gismeteo.ru source  
  * Added all stations from Regione Autonoma Friuli Venezia Giulia to
    openwearthermap.org source
  * Added station Cesena, ER, Italy to weather.com, openweathermap.com source  

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 13 Aug 2014 23:31:23 +0200

meecast (0.9.8) unstable; urgency=low

  * Added Sunrise and sunset for fmi.fi source
  * Added Precipitation
  * Added Precipitation rate
  * Added Dewpoint
  * Added dewpoint for weather.com source
  * Updated Catalan, Spanish, Russian, Dannish translations

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 13 Aug 2014 23:31:23 +0200

meecast (0.9.7) unstable; urgency=low

  * Fixed sunrise and sunset time for weather.com source again :)
  * Updated Itailian, Hungarian, Turkish translations

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 03 Aug 2014 22:31:23 +0200

meecast (0.9.6) unstable; urgency=low

  * Fixed donation link 
  * Added translation string for gismeteo.ru
  * Fixed sunrise and sunset time for weather.com source
  * Added fmi.fi source
  * Updated Catalan, Germany, Slovenian, Spanish,
    Russian, Hungarian, Danish, Italian, Finnish translations
  * Fixed problem with null wind direction on main form
  * Added the new source fmi.fi

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 08 Jul 2014 08:31:23 +0200

meecast (0.9.5) unstable; urgency=low

  * Added translation string for gismeteo.ru
  * Fixed problem with null data for day forecast in weather.com source  
  * Updated Catalan, Finnish, Norwegian, Slovenian, Danish,
    Spanish, Italian, Russian, Hungarian, French translations
  * Fixed problem with data (humidity, feels like...) in current weather in foreca.com source 
  * Added stations to Finland in yr.no source
  * Added hourly weather forecast for yr.no source
